@@ -1033,7 +1033,7 @@ SEXP attribute_hidden do_gettext(SEXP call, SEXP op, SEXP args, SEXP rho)
 SEXP attribute_hidden do_ngettext(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
 #ifdef ENABLE_NLS
-    const char *domain = "";
+    const char *domain = "", *cfn;;
     char *buf;
     SEXP ans, sdom = CADDDR(args);
 #endif
@@ -1055,8 +1055,11 @@ SEXP attribute_hidden do_ngettext(SEXP call, SEXP op, SEXP args, SEXP rho)
 	     cptr != NULL && cptr->callflag != CTXT_TOPLEVEL;
 	     cptr = cptr->nextcontext)
 	    if (cptr->callflag & CTXT_FUNCTION) {
+		/* stop() etc have internal call to .makeMessage */
+		cfn = CHAR(STRING_ELT(deparse1s(CAR(cptr->call)), 0));
+		if(streql(cfn, "stop") || streql(cfn, "warning")
+		   || streql(cfn, "message")) continue;
 		rho = cptr->cloenv;
-		break;
 	    }
 	while(rho != R_EmptyEnv) {
 	    if (rho == R_GlobalEnv) break;
